--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.ad1983c8-35d7-4c90-ab72-d73628963b7b}}
-          heroku_app_name: "jmvellez" #Must be unique in Heroku
+          heroku_app_name: "jmvellez" #Must be unique in Heroku 1
           heroku_email: "sukundum@gmail.com"
           remote_branch: "master"
           usedocker: true
